# crypto_invoice

./: .gitignore  LICENSE  README.md  docker-compose.yml  hardhat.config.js  package-lock.json  package.json
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/config/: default.toml  development.toml
backend/db/: Dockerfile  setup_local_db.sh
backend/src/: config.rs  error.rs  main.rs
backend/src/app_error/: app_error.rs
backend/src/config/: app_config.rs  mod.rs
backend/src/models/: auth_challenges.rs  mod.rs  security_events.rs  users.rs
backend/src/routes/: auth.rs  home.rs  mod.rs  router.rs
backend/src/utils/: jwt.rs  mod.rs  rate_limiter.rs  server_utils.rs
contracts/: InvoicePayment.sol
db/: README.md  init.sql
frontend/: .env.development  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Home.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  authService.ts
frontend/src/stores/: useAuthStore.ts
frontend/src/types/: ethereum.d.ts  ethereum.ts  window.d.ts
frontend/src/views/: HomePage.vue  WelcomePage.vue
test/: InvoicePaymentTest.js
