[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
sea-orm = "1.1.4"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.15.1"
